<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/diary" />

    <TextView
        android:id="@+id/textdialogtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/img_logo"
        android:padding="20dp"
        android:text="@string/updatedata"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_updatedialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/textdialogtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:padding="9dp" />

    <EditText
        android:id="@+id/et_updatedialog_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_updatedialog_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/number"
        android:textColor="@color/black"
        android:padding="9dp" />

    <Button
        android:id="@+id/btn_updatedialog_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_updatedialog_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/btnupdate"
        android:layout_marginBottom="20dp"
        android:textSize="20sp" />
</RelativeLayout>